--- a/app/Resources/themes/ideacontest/SpoutletBundle/public/css/lists-links.css
+++ b/app/Resources/themes/ideacontest/SpoutletBundle/public/css/lists-links.css
@@ -168,8 +168,8 @@ ul.dflt, .row ul {
 	}
 	
 #group-by-topic ul li {
-    margin-bottom: 10px;
-    font-size: 1.5em;
+    margin-bottom: 12px;
+    font-size: 1.4em;
 }
 
 #create-group-btn {
